vlib/v/checker/tests/import_multiple_modules_err.vv
import time math
fn main() {
	println(time.now().unix_time())
}
